--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
 
       <div class="photo" aria-hidden="true">
-        <img id="photo" src="logo.png" alt="photo"/>
+        <img id="photo" src="www.facebook (6).png" alt="photo"/>
       </div>
     </div>
 
